# school-setup

./: .gitattributes  .gitignore  .tmux  CODE_OF_CONDUCT.md  Makefile  README.md  SECURITY.md  config.py  config.yaml  credentials.json  file-tree-structure  init-config.sh  install  install-example  main.py  pyrightconfig.json  requirements.txt  run-bash-scripts.py  shortcut-manager.sh  token.json  token.pickle
RofiLessonManager/: LICENSE.md  README.md  __init__.py  assignments.py  books.py  change_course.py  change_path_to_classes.py  commands.py  countdown.py  courses.py  exams.py  inkscape_figures.py  lectures.py  new_lesson.py  notes.py  path.py  projects.py  view_assignments.py  view_lessons.py
docs/: conf.py
example-setup/: config.py  config.yaml  current-course
lesson-manager/: pyproject.toml  pyrightconfig.json
lesson-manager/RofiLessonManager/: courses.py  notes.py
lesson-manager/core/: assignments.py  books.py  courses.py  inkscape_figures.py  notes.py
lesson-manager/lesson_manager/: cc_info.py  cli.py  config.py
lesson-manager/src/: countdown.py  get_course.py  init_courses.py  rofi_assignments.py  rofi_books.py  rofi_courses.py  rofi_figures.py  rofi_notes.py  rofi_strip_notes.py  shortcut_manager.py  source_notes.py  sync_notes.py
lesson-manager/utils/: __init__.py  authenticate.py  check_if_assignment_is_due.py  convert_number.py  create_course_event.py  folder_to_name.py  format_time.py  generate_short_title.py  get_week.py  join.py  load_data.py  location.py  sync_file.py
lesson-manager/utils/rofi/: display_text.py  select.py
(+186 files in other folders)
